// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<KeyFactsContainer>
  <KeyFactsTitle
    title="Sex, cocaine and sport: a volatile combination"
  />
  <KeyFactsWrapper>
    <View>
      <View />
      <Text>
        The Italian cyclist Gilberto Simoni was cleared of taking cocaine in 2002 by proving that traces of the drug came from coca leaf sweets his aunt brought back from Peru
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Daniel Plaza, an 
        <TextLink
          target={null}
          url="https://www.thetimes.co.uk/topic/olympics"
        />
         race-walking champion from Spain, said that a positive test for nandrolone in 1996 had been caused by his performing a sex act on his pregnant wife. Ten years later, he was cleared
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife "at least four times" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not
      </Text>
    </View>
    <View>
      <View />
      <Text>
        In 2010 the American sprinter LaShawn Merritt blamed a positive test on not reading the ingredients for his 
        <Text>
          penis
        </Text>
         enlargement medication. A possible two-year ban was reduced by 
        <Text>
          three months
        </Text>
      </Text>
    </View>
  </KeyFactsWrapper>
</KeyFactsContainer>
`;

exports[`2. key facts without title 1`] = `
<KeyFactsContainer>
  <KeyFactsWrapper>
    <View>
      <View />
      <Text>
        The Italian cyclist Gilberto Simoni was cleared of taking cocaine in 2002 by proving that traces of the drug came from coca leaf sweets his aunt brought back from Peru
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Daniel Plaza, an 
        <TextLink
          target={null}
          url="https://www.thetimes.co.uk/topic/olympics"
        />
         race-walking champion from Spain, said that a positive test for nandrolone in 1996 had been caused by his performing a sex act on his pregnant wife. Ten years later, he was cleared
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife "at least four times" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not
      </Text>
    </View>
    <View>
      <View />
      <Text>
        In 2010 the American sprinter LaShawn Merritt blamed a positive test on not reading the ingredients for his 
        <Text>
          penis
        </Text>
         enlargement medication. A possible two-year ban was reduced by 
        <Text>
          three months
        </Text>
      </Text>
    </View>
  </KeyFactsWrapper>
</KeyFactsContainer>
`;
